# CODE_CITADEL

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
benchmark/: __init__.py  __main__.py  config.py  paths.py  timing.py  types.py
benchmark/data/: chunk.py  clean.py  download.py  questions.py
benchmark/embeddings/: __init__.py  generate.py  model.py
benchmark/reporting/: plots.py  summarize.py
benchmark/runners/: __init__.py  indexing.py  load.py  orchestrator.py  querying.py
benchmark/stores/: base.py  chroma_store.py  factory.py  local_moss.py  moss_store.py  qdrant_store.py
data/questions/: benchmark_questions.json
scripts/: clean_results.py  run_all.ps1  run_all.sh
tests/: test_chunking.py  test_local_moss.py  test_questions.py  test_summary.py
