[project]
name = "moss-qdrant-chroma-benchmark"
version = "0.1.0"
description = "Local benchmark comparing Moss, Qdrant, and Chroma on Pride and Prejudice."
requires-python = ">=3.10"
dependencies = [
  "chromadb>=0.5.0",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "qdrant-client>=1.9.0",
  "requests>=2.31.0",
  "sentence-transformers>=3.0.0",
  "torch>=2.2.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

